--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#359bb7</color>
-    <color name="colorPrimaryDark">#067da8</color>
-    <color name="colorAccent">#ffc535</color>
+
+    <color name="colorPrimary">#66ffe8</color>
+    <color name="colorPrimaryDark">#22c9be</color>
+    <color name="colorAccent">#1a6eb2</color>
+    <color name="colorAccentDark">#10426b</color>
 
     <color name="colorPrimaryText">#363636</color>
     <color name="colorSecondaryText">#939393</color>
