--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,7 +48,7 @@
     <dimen name="text_size_big_title">22sp</dimen>
     <dimen name="text_size_bigger_title">24sp</dimen>
 
-
-    <dimen name="act_home_cv_height">200dp</dimen>
+    <dimen name="act_home_iv_dimen">130dp</dimen>
+    <dimen name="act_home_pb_dimen">150dp</dimen>
 
 </resources>
