Progress dialog component creation

--- a/app/src/main/res/layout/act_home.xml
+++ b/app/src/main/res/layout/act_home.xml
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small_margin"
-            android:text="@{viewModel.currentUser.name}"
+            android:text="@string/act_home_tv_user_name"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/text_size_medium_title"
             android:textStyle="bold"
@@ -64,7 +64,7 @@
             android:id="@+id/tvUserEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.currentUser.email}"
+            android:text="@string/act_home_tv_user_email"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/text_size_big"
             app:layout_constraintEnd_toEndOf="parent"
