set content description for accessibility

--- a/app/src/main/res/layout/act_home.xml
+++ b/app/src/main/res/layout/act_home.xml
@@ -40,7 +40,7 @@
             android:layout_height="@dimen/act_home_iv_user"
             android:layout_marginTop="7.5dp"
             android:background="@drawable/ic_avatar"
-            android:contentDescription="@string/act_home_iv_user"
+            android:contentDescription="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +81,7 @@
             android:layout_marginEnd="@dimen/medium_margin"
             android:layout_marginBottom="@dimen/medium_margin"
             android:background="@drawable/bg_button_selector"
+            android:contentDescription="@string/act_home_ib_send_money"
             android:enabled="false"
             android:text="@string/act_home_ib_send_money"
             android:textColor="@color/colorWhite"
@@ -96,6 +97,7 @@
             android:layout_marginStart="@dimen/medium_margin"
             android:layout_marginEnd="@dimen/medium_margin"
             android:background="@drawable/bg_button_selector"
+            android:contentDescription="@string/act_home_ib_history"
             android:enabled="false"
             android:text="@string/act_home_ib_history"
             android:textColor="@color/colorWhite"
