added android:accessibilityLiveRegion in buttons to feedback users when it's state change

--- a/app/src/main/res/layout/act_home.xml
+++ b/app/src/main/res/layout/act_home.xml
@@ -80,6 +80,7 @@
             android:layout_marginStart="@dimen/medium_margin"
             android:layout_marginEnd="@dimen/medium_margin"
             android:layout_marginBottom="@dimen/medium_margin"
+            android:accessibilityLiveRegion="none"
             android:background="@drawable/bg_button_selector"
             android:contentDescription="@string/act_home_ib_send_money"
             android:enabled="false"
@@ -96,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/medium_margin"
             android:layout_marginEnd="@dimen/medium_margin"
+            android:accessibilityLiveRegion="none"
             android:background="@drawable/bg_button_selector"
             android:contentDescription="@string/act_home_ib_history"
             android:enabled="false"
