--- a/app/src/main/res/layout/dialog_transfer.xml
+++ b/app/src/main/res/layout/dialog_transfer.xml
@@ -122,6 +122,7 @@
                     android:layout_marginTop="@dimen/medium_margin"
                     android:layout_marginEnd="@dimen/medium_margin"
                     android:layout_marginBottom="@dimen/medium_margin"
+                    android:accessibilityLiveRegion="polite"
                     android:background="@drawable/bg_button_selector"
                     android:contentDescription="@string/dialog_transfer_bt_transfer_money"
                     android:text="@string/dialog_transfer_bt_transfer_money"
