Material design added and layout refactor

--- a/app/src/main/res/layout/act_home.xml
+++ b/app/src/main/res/layout/act_home.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_default"
-        android:padding="@dimen/biggest_padding2">
+        android:paddingStart="@dimen/biggest_padding2"
+        android:paddingEnd="@dimen/biggest_padding2">
 
         <ProgressBar
             android:id="@+id/pbLoading"
@@ -97,6 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/medium_margin"
             android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginBottom="@dimen/medium_margin"
             android:accessibilityLiveRegion="none"
             android:background="@drawable/bg_button_selector"
             android:contentDescription="@string/act_home_ib_history"
